src/objects/PO_Administrator__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>DF_Contact__r.Contact_Number__c</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>PO Administrators</relationshipLabel>
        <relationshipName>PO_Administrators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>DF_Contact__r.Email__c</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invited_Email__c</fullName>
        <label>Invited Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invited_Name__c</fullName>
        <label>Invited Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inviter_Name__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inviter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAddedThroughLoadProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Added Through Load Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Organisation</label>
        <referenceTo>Partner_Organisation__c</referenceTo>
        <relationshipLabel>PO Administrators</relationshipLabel>
        <relationshipName>PO_Administrators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PO Administrator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>POA{000000}</displayFormat>
        <label>POA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Administrators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>